syntax = "proto3";

package pb;

option go_package = "/pb";

service Greeter {
  rpc StreamHello (HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
